# Air-receiver

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  airplay_jni.c
app/src/main/java/com/airreceiver/tv/: AirPlayApp.kt  MainActivity.kt
app/src/main/java/com/airreceiver/tv/crypto/: AirPlayCrypto.kt  PairingHandler.kt  PlayFairNative.kt
app/src/main/java/com/airreceiver/tv/mdns/: MdnsAdvertiser.kt
app/src/main/java/com/airreceiver/tv/media/: AudioPlayer.kt  VideoDecoder.kt
app/src/main/java/com/airreceiver/tv/rtsp/: RtspServer.kt  RtspSession.kt
app/src/main/java/com/airreceiver/tv/service/: AirPlayService.kt
app/src/main/java/com/airreceiver/tv/util/: NetworkUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
